--- a/src/app/classroom-alumn/classroom-alumn.page.scss
+++ b/src/app/classroom-alumn/classroom-alumn.page.scss
@@ -4,32 +4,54 @@ ion-header {
         color: #fff;
         font-weight: bold;
     }
-}
-
-ion-grid {
-    margin: 5px;
-    ion-row {
-        border: 1px solid #f6f1f1; // Borde de cada notificación
-        background-color: var(--ion-color-primary-contrast);
-        border-radius: 10px;
-        box-shadow: 0 5px 5px rgba(13, 13, 13, 0.2);
-        margin-bottom: 10px; // Espacio entre notificaciones
-        padding: 10px;
-        ion-col {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            &:nth-child(1) {
-                justify-content: flex-start;
-                padding: 0px;
-            }
-            &:nth-child(2) {
-                flex-grow: 1;
-                color: var(--ion-color-text12);
-            }
-            &:nth-child(3) {
-                justify-content: right;
-            }
-        }
+  }
+  
+  ion-grid {
+      margin: 5px;
+      ion-row {
+          border: 1px solid #f6f1f1; // Borde de cada notificación
+          background-color: var(--ion-color-primary-contrast);
+          border-radius: 10px;
+          box-shadow: 0 5px 5px rgba(13, 13, 13, 0.2);
+          margin-bottom: 10px; // Espacio entre notificaciones
+          padding: 10px;
+          ion-col {
+              display: flex;
+              align-items: center;
+              padding: 10px;
+              &:nth-child(1) {
+                  justify-content: flex-start;
+                  padding: 0px;
+              }
+              &:nth-child(2) {
+                  flex-grow: 1;
+                  color: var(--ion-color-text1);
+              }
+              &:nth-child(3) {
+                  justify-content: right;
+              }
+          }
+      }
+  }
+  
+  .text-title {
+    font-size: 18px;
+    font-style: oblique;
+    font-weight: bold;
+  }
+  
+  .text-info {
+    font-size: 15px;
+    color: var(--ion-color-text2);
+    padding: 5px;
+  }
+  
+  .text-details {
+    font-size: 12px;
+  }
+  
+  .mi-imagen {
+      width: 116px;
+      height: 77px;
     }
-}
+  
