--- a/src/app/group-alum/group-alum.page.scss
+++ b/src/app/group-alum/group-alum.page.scss
@@ -1,9 +1,9 @@
 ion-header {
-    ion-toolbar {
-        --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
-        color: #fff;
-        font-weight: bold;
-    }
+  ion-toolbar {
+      --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+      color: #fff;
+      font-weight: bold;
+  }
 }
 
 ion-grid {
@@ -25,17 +25,38 @@ ion-grid {
             }
             &:nth-child(2) {
                 flex-grow: 1;
-                color: var(--ion-color-text12);
+                color: var(--ion-color-text1);
             }
             &:nth-child(3) {
                 justify-content: right;
             }
         }
     }
-} 
+}
+
+.text-title {
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: bold;
+}
+
+.text-info {
+  font-size: 15px;
+  color: var(--ion-color-text2);
+  padding: 5px;
+}
+
+.text-details {
+  font-size: 12px;
+}
+
+.mi-imagen {
+  width: 116px;
+  height: 77px;
+}
 
 .icon-large {
-    font-size: 30px; /* Tamaño de los iconos de los archivos */
+    font-size: 100px; /* Tamaño de los iconos de los archivos */
   }
 
   .button-with-text {
@@ -56,4 +77,3 @@ ion-grid {
     height: 50px;
     width: 375px; /* Ancho fijo de 375px */
   }
-  
