--- a/src/app/library-alumn/library-alumn.page.html
+++ b/src/app/library-alumn/library-alumn.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 <!-- Boton para regresar -->    
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button default-href="#" routerLink="/"></ion-back-button>
     </ion-buttons>
     <ion-title>Archivos</ion-title>
   </ion-toolbar>
@@ -15,11 +15,11 @@
     <!-- Crear una fila por cada elemento --> 
     <ion-row *ngFor="let library of librarys">
       <!-- Crear columna para el icono -->
-      <ion-col size="auto">
-        <ion-icon [name]="getIconName(library.lib_type)" class="icon-large"></ion-icon>
+      <ion-col size="auto" (click)="openLibraryFile(library.lib_file)">
+        <ion-icon [name]="getIconName(library.lib_type)" class="purple-icon"></ion-icon>
       </ion-col>
       <!-- Crear columna para el texto -->
-      <ion-col>
+      <ion-col (click)="openLibraryFile(library.lib_file)">
         <ion-label>
           <h2>{{ library.lib_title }}</h2>
           <h3>{{ library.lib_description }}</h3>
@@ -33,9 +33,10 @@
         </ion-button>
       </ion-col> -->
 
-
     <!-- Cierro filas y grid -->
     </ion-row>
   </ion-grid>
+
+  <app-paginacion [total]="totalLibrarys" (click)="pagina($event)"></app-paginacion>
   
 </ion-content>
