--- a/src/app/menu1-alum/menu1-alum.page.html
+++ b/src/app/menu1-alum/menu1-alum.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 <!-- Boton para regresar -->    
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button default-href="#" routerLink="/"></ion-back-button>
     </ion-buttons>
     <ion-title>{{gruposubject}} {{grupocode}}</ion-title>
   </ion-toolbar>
@@ -15,7 +15,7 @@
     <ion-row class="ion-justify-content-center">
       <ion-col>
         <!-- Botón para la página 'asistencia' -->
-        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/asistencia', grupoid]">
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/tomar-asistencia', grupoid]">
           <ion-icon aria-hidden="true" src="assets/icon/asistencia.svg" size="large"></ion-icon>
         </ion-button>
         <ion-label>Asistencia</ion-label>
