correccion de grades y extracurriculars

--- a/src/app/addgrade/addgrade.page.html
+++ b/src/app/addgrade/addgrade.page.html
@@ -14,7 +14,7 @@
           <ion-select formControlName="graper_fkperson" class="form-control">
             <ion-select-option *ngFor="let persona of personas"
                 [value]="persona.list_id">
-                {{ persona.list_fkperson}}
+                {{ persona.person}}
             </ion-select-option>
             </ion-select>
       </ion-item>
