Cambio de iconos

--- a/src/app/menu1/menu1.page.html
+++ b/src/app/menu1/menu1.page.html
@@ -16,21 +16,21 @@
       <ion-col>
         <!-- Botón para la página 'asistencia' -->
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/asistencia', grupoid]">
-          <ion-icon aria-hidden="true" src="assets/icon/asistencia.svg" size="large"></ion-icon>
+          <ion-icon name="list-outline" size="large"></ion-icon>
         </ion-button>
         <ion-label>Asistencia</ion-label>
       </ion-col>
       <!-- Botón para Notificaciones -->
       <ion-col>
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/menunoti', grupoid]">
-          <ion-icon size="large" src="assets/icon/Noti.svg" size="large"></ion-icon>
+          <ion-icon name="notifications-outline" size="large"></ion-icon>        
         </ion-button>
         <ion-label>Notificaciones</ion-label>
       </ion-col>
       <!-- Botón para la página 'library' -->      
       <ion-col>
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/library', grupoid]">
-          <ion-icon size="large" src="assets/icon/file.svg" size="large"></ion-icon>
+          <ion-icon name="documents-outline" size="large"></ion-icon>
         </ion-button>
         <ion-label>Archivos</ion-label>
       </ion-col>
@@ -41,7 +41,7 @@
       <ion-col>
         <!-- Botón para la página 'question' -->
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/question']">     
-          <ion-icon size="large" src="assets/icon/pregunta.svg" size="large"></ion-icon>
+          <ion-icon name="mail-unread-outline" size="large"></ion-icon>
         </ion-button>
         <ion-label>Preguntas</ion-label>
       </ion-col>
