--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -17,14 +17,14 @@
       <ion-col>
         <!-- Botón para la página 'asistencia' -->
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/lista-asistencia',grupoid]">
-          <ion-icon aria-hidden="true" src="assets/icon/asistencia.svg" size="large"></ion-icon>
+          <ion-icon name="list-outline" size="large"></ion-icon>
         </ion-button>
         <ion-label>Ver asistencia</ion-label>
       </ion-col>
       <!-- Botón para obtener código -->
       <ion-col>
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/codigos',grupoid]">
-          <ion-icon size="large" src="assets/grupoMenu/qr-code.svg" size="large"></ion-icon>
+          <ion-icon name="qr-code-outline" size="large"></ion-icon>
         </ion-button>
         <ion-label>Codigos</ion-label>
       </ion-col>
