--- a/src/app/menunoti/menunoti.page.html
+++ b/src/app/menunoti/menunoti.page.html
@@ -16,14 +16,14 @@
       <ion-col>
         <!-- Botón para la página 'asistencia' -->
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/notextracurricular', grupoid]">
-          <ion-icon aria-hidden="true" src="assets/icon/asistencia.svg" size="large"></ion-icon>
+          <ion-icon name="megaphone-outline" size="large"></ion-icon>
         </ion-button>
         <ion-label>Eventos</ion-label>
       </ion-col>
       <!-- Botón para Notificaciones -->
       <ion-col>
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/grade', grupoid]">
-          <ion-icon size="large" src="assets/icon/Noti.svg" size="large"></ion-icon>
+          <ion-icon name="checkmark-done-outline" size="large"></ion-icon>
         </ion-button>
         <ion-label>Calificaciones</ion-label>
       </ion-col>
