--- a/src/global.scss
+++ b/src/global.scss
@@ -34,3 +34,11 @@ ion-input.custom.md .input-bottom .helper-text,
 ion-input.custom.md .input-bottom .counter {
   color: var(--ion-color-primary);
 }
+
+ion-header {
+  ion-toolbar {
+      --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+      color: #fff;
+      font-weight: bold;
+  }
+}
