select de personas

--- a/src/app/newgrade/newgrade.page.html
+++ b/src/app/newgrade/newgrade.page.html
@@ -122,7 +122,7 @@
                 <ion-select formControlName="graper_fkperson" class="form-control">
                   <ion-select-option *ngFor="let person of personas"
                       [value]="person.list_id">
-                      {{ person.list_fkperson }}
+                      {{ person.person }}
                   </ion-select-option>
                   </ion-select>
                 <div id="note" *ngFor="let validation of
