--- a/src/app/addgrade/addgrade.page.html
+++ b/src/app/addgrade/addgrade.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="personalizado">
-      <ion-title class="ion-text-center">{{ title }}</ion-title>
+      <ion-title class="ion-text-center">Añadir calificación</ion-title>
   </ion-toolbar>
 </ion-header>
 
